--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -39,3 +39,11 @@ body{
     padding: 8px 15px;
     cursor: pointer;
 }
+
+.auto-play{
+    background-color: white;
+    border:none;
+    font-size: 15px;
+    padding: 8px 15px;
+    cursor: pointer;
+}
