--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -32,7 +32,10 @@ body{
     margin-top: 60px;
 }
 
-.reset{
+.reset,
+.auto-play,
+.yes,
+.no{
     background-color: white;
     border:none;
     font-size: 15px;
@@ -40,10 +43,3 @@ body{
     cursor: pointer;
 }
 
-.auto-play{
-    background-color: white;
-    border:none;
-    font-size: 15px;
-    padding: 8px 15px;
-    cursor: pointer;
-}
